manifests/kind/infrastructure/controllers/argocd/argocd_gateway.networking.k8s.io_v1_gateway_argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: 172.18.0.6
  listeners:
  - hostname: argocd.172.18.0.6.nip.io
    name: argocd
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: argocd-gateway-tls
      mode: Terminate
