manifests/kind/infrastructure/controllers/argocd/argocd_gateway.networking.k8s.io_v1_httproute_argocd-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hostnames:
  - argocd.172.18.0.6.nip.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: argocd
    sectionName: argocd
  rules:
  - backendRefs:
    - kind: Service
      name: argocd-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
